# LangChain_examples_for_beginners

./: README.md  env.text  pyproject.toml
0. Summary Text/: use_azure_openai.py
00_Summary Text/: summary_and_translate.py  use_ollama.py
01_ReAct Agent/: search_agent.py
02_RAG/: ingest_documents.py  main.py
02_RAG/documents/: vectordb_mediumblog.txt
1. ReAct Agent/: search_agent_output_parsing.py  search_agent_using_LCEL.py
